--- a/Resume.html
+++ b/Resume.html
@@ -7,7 +7,18 @@
     <title>Resume</title>
 </head>
 <body>
-    <h4>Resume</h4>
-    <p>PUTTI MOHAN</p>
+    <div>
+    <h1>Mohan Putti</h1>
+    <p>Problem Solver</p>
+    </div>
+    <div>
+        <h3>Education</h3>
+        <div>
+            <li>Btech-ComputerScienceEngineering<p>Vardhaman college of engineering</p></li>
+            
+            <li>Intermediate<p>Siddhartha junior college</p></li>
+            <li>SecondaryEducation<p>NavaBharathiVidyaNiketan</p></li>
+        </div>
+    </div>
 </body>
 </html>
